# agent-messaging

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_error_signature_normalizer_fields.py  0003_session_event_api_fields.py  0004_device_tokens.py
docs/: idempotency_verification.md
fixlog/: __init__.py  config.py  main.py
fixlog/api/: __init__.py  collector.py  confirm.py  device_tokens.py  entries.py  feed.py  questions.py  sandbox.py  search.py  sessions.py  shared.py  verifications.py
fixlog/auth/: __init__.py  collector.py  deps.py  middleware.py  web.py
fixlog/db/: models.py  seed.py  session.py
fixlog/identity/: __init__.py  (+2 more)
fixlog_harness/: __init__.py  cli.py  client.py  config.py  harvester.py  local_config.py  models.py  redaction.py  service.py  stuck_detector.py  watcher.py
scripts/: dev_seed.py  railway-start.sh  verify_idempotency.py
tasks/: lessons.md  phase2_proposed_artifacts.md  proposed_artifacts.md  todo.md
tests/: conftest.py  test_auth.py  test_auto_verification_e2e.py  test_collector_issues.py  test_confirm_reject.py  test_device_tokens.py  test_entries_api.py  test_feed_api.py  test_identity.py  test_install_script.py  test_production_auth.py  test_questions_api.py  test_sandbox_runner.py  test_sandbox_spec.py  test_sandbox_status.py  test_search_exact_match.py  test_search_placeholder.py  test_session_events_api.py  test_sessions_api.py  test_verifications_api.py  test_verifier_worker.py  test_web_views.py
(+113 files in other folders)
