[project]
name = "fixlog"
version = "0.1.0"
description = "Verified error-fix pairs with mandatory reproductions for AI coding agents."
requires-python = ">=3.11"
dependencies = [
  "alembic==1.17.2",
  "fastapi==0.135.3",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "python-dotenv==1.2.1",
  "sqlalchemy==2.0.49",
  "sqlite-vec==0.1.6",
  "uvicorn[standard]==0.44.0",
  "anthropic==0.66.0",
  "watchdog==6.0.0",
]

[project.scripts]
fixlog = "fixlog_harness.cli:main"

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.0.0",
]

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fixlog", "fixlog_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
